first try at incorporating eps results into document

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[procnames]{listings}
 \usepackage{color}
+\usepackage{graphicx}
+\usepackage{subfig}
 \begin{document}
 \definecolor{keywords}{RGB}{255,0,90}
 \definecolor{comments}{RGB}{0,0,113}
@@ -45,7 +47,10 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \include{ucd-tex-template/evaluation}
 \include{ucd-tex-template/references}
 \begin{appendices}
-\include{ucd-tex-template/appendix1}
+\include{ocfa/intro}
+\include{ocfa/step2/results}
+\include{ocfa/step4/results}
+\include{ocfa/conclussions}
 \end{appendices}
 
 \end{document}
