addedd all the eps files so far to the latex document

--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,9 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \begin{appendices}
 \include{ocfa/intro}
 \include{ocfa/step2/results}
+\include{ocfa/step3/results}
 \include{ocfa/step4/results}
+\include{ocfa/step5/results}
 \include{ocfa/conclussions}
 \end{appendices}
 
