--- a/ocfa/step4/results.tex
+++ b/ocfa/step4/results.tex
@@ -2,18 +2,18 @@
 FIXME, we need text here.
 \begin{figure}
 \centering
-\subfloat[first]{
-  \includegraphics[width=65mm]{ocfa/step4/stripped1_inflow.eps}
+\subfloat[case 1]{
+  \includegraphics[width=70mm]{ocfa/step4/stripped1_inflow.eps}
 }
-\subfloat[second]{
-  \includegraphics[width=65mm]{ocfa/step4/stripped2_inflow.eps}
+\subfloat[case 2]{
+  \includegraphics[width=70mm]{ocfa/step4/stripped2_inflow.eps}
 }
 \hspace{0mm}
-\subfloat[third]{
-  \includegraphics[width=65mm]{ocfa/step4/stripped3_inflow.eps}
+\subfloat[case 3]{
+  \includegraphics[width=70mm]{ocfa/step4/stripped3_inflow.eps}
 }
-\subfloat[forth]{
-  \includegraphics[width=65mm]{ocfa/step4/stripped4_inflow.eps}
+\subfloat[case 4]{
+  \includegraphics[width=70mm]{ocfa/step4/stripped4_inflow.eps}
 }
 \caption{In/out flow probability density}
 \end{figure}
