--- a/ocfa/step5/results.tex
+++ b/ocfa/step5/results.tex
@@ -20,3 +20,20 @@ FIXME: we need text here.
   \includegraphics[width=130mm]{ocfa/step5/stripped4_modules.eps}
   \caption{Case 4 inter-module flows}
 \end{figure}
+\begin{figure}
+\centering
+\subfloat[case 1]{
+  \includegraphics[width=70mm]{ocfa/step5/stripped1_modtypes.eps}
+}
+\subfloat[case 2]{
+  \includegraphics[width=70mm]{ocfa/step5/stripped2_modtypes.eps}
+}
+\hspace{0mm}
+\subfloat[case 3]{
+  \includegraphics[width=70mm]{ocfa/step5/stripped3_modtypes.eps}
+}
+\subfloat[case 4]{
+  \includegraphics[width=70mm]{ocfa/step5/stripped4_modtypes.eps}
+}
+\caption{Rough data flow}
+\end{figure}
