a bit of analysis

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,8 @@
 \usepackage{color}
 \usepackage{graphicx}
 \usepackage{subfig}
+\usepackage{hyperref}
+\usepackage{mathtools}
 \begin{document}
 \definecolor{keywords}{RGB}{255,0,90}
 \definecolor{comments}{RGB}{0,0,113}
@@ -37,15 +39,15 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 {\large \today}
 \vfill
 \end{titlepage}
-\include{ucd-tex-template/abstract}
+%\include{ucd-tex-template/abstract}
 \tableofcontents
-\include{ucd-tex-template/introduction}
-\include{ucd-tex-template/literature}
-\include{ucd-tex-template/problem}
-\include{ucd-tex-template/approach}
-\include{ucd-tex-template/results}
-\include{ucd-tex-template/evaluation}
-\include{ucd-tex-template/references}
+%\include{ucd-tex-template/introduction}
+%\include{ucd-tex-template/literature}
+%\include{ucd-tex-template/problem}
+%\include{ucd-tex-template/approach}
+%\include{ucd-tex-template/results}
+%\include{ucd-tex-template/evaluation}
+%\include{ucd-tex-template/references}
 \begin{appendices}
 \include{ocfa/intro}
 \include{ocfa/step2/results}
@@ -53,6 +55,7 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \include{ocfa/step4/results}
 \include{ocfa/step5/results}
 \include{ocfa/conclussions}
+\include{ocfa/scriptsreference}
 \end{appendices}
 
 \end{document}
