--- a/ocfa/conclussions.tex
+++ b/ocfa/conclussions.tex
@@ -1,5 +1,6 @@
-\section{Effectiveness of OCFA troughput measures}
+\section{Conclussions of the OCFA timing analysis}
+\subsection{Effectiveness of OCFA troughput measures}
 
-\section{The advantages of a slow kickstart and a database performance bottleneck}
+\subsection{The advantages of a slow kickstart and a database performance bottleneck}
 
-\section{Conclusions and leasons learned}
+\subsection{Conclusions and leasons learned}
