--- a/ocfa/step3/results.tex
+++ b/ocfa/step3/results.tex
@@ -1,4 +1,4 @@
-\section{Inter-job timing}
+\subsection{Inter-job timing}
 FIXME, we need text here.
 \begin{figure}
 \centering
@@ -17,7 +17,7 @@ FIXME, we need text here.
 }
 \caption{Inter-job time probability density}
 \end{figure}
-\section{Inter-job timing by content size}
+\subsection{Inter-job timing by content size}
 FIXME, we need text here.
 \begin{figure}
 \centering
@@ -36,7 +36,7 @@ FIXME, we need text here.
 }
 \caption{Inter-job time probability density by volume}
 \end{figure}
-\section{First-last timing}
+\subsection{First-last timing}
 FIXME, we need text here.
 \begin{figure}
 \centering
@@ -55,7 +55,7 @@ FIXME, we need text here.
 }
 \caption{First-last time probability density}
 \end{figure}
-\section{First-last timing by content size}
+\subsection{First-last timing by content size}
 FIXME, we need text here.
 \begin{figure}
 \centering
