--- a/ocfa/step4/results.tex
+++ b/ocfa/step4/results.tex
@@ -1,4 +1,4 @@
-\section{Inflow and outflow for our ficticious cache}
+\subsection{Inflow and outflow for our ficticious cache}
 FIXME, we need text here.
 \begin{figure}
 \centering
