Lotsa new text.

--- a/conf.tex
+++ b/conf.tex
@@ -1,5 +1,5 @@
-\def \mymaintitle {Mattock optimized hashing \& throtling}
-\def \mysubtitle {Minimizing disk-cache misses in an asynchonous message-based forensic framework on the Linux platform.}
+\def \mymaintitle {Storage annotations, opportunistic hashing \& throttling}
+\def \mysubtitle {Minimizing disk-cache misses in an asynchronous message-based forensic framework on the Linux platform.}
 \def \myauthor {Rob J Meijer}
 \def \mysupervisor {Dr Pavel Gladishev} 
 \def \mytitle {M.Sc.}
