--- a/ocfa/intro.tex
+++ b/ocfa/intro.tex
@@ -1,5 +1,5 @@
 \chapter{Evidence inter-disk-io timing in OCFA}
-This appendix describes the fact-finding case-study regarding inter-job timing in the Open Computer Forensics Architecture (OCFA). While use and development of OCFA has been discontinued by the Dutch National Police, in the period from 2004 until 2012, this organization made has made extensive use of this asynchronous computer forensic framework. While no longer active, some old database backups were still available at the time of this study, and timing information has been extracted from these database dumps in order to study the real life disk access properties of such an asynchronous architecture. This chapter gives some background information on the OCFA messaging and routing mechanisms and on those facilities that OCFA implemented in order to prioritize processing of certain data in an attempt to optimize throughput. It than goes on to evaluate the timing information as extracted from the database dumps from five distinct investigations, and will try to reason about some possible explanations regarding the results of the analysis. This chapter will be ending with conclusions about the effectiveness of the OCFA throughput measures and areas of concern regarding disk-cache misses as far as these are relevant to the subject of this dissertation.
+This appendix describes the fact-finding case-study regarding inter-job timing in the Open Computer Forensics Architecture (OCFA). While use and development of OCFA has been discontinued by the Dutch National Police, in the period from 2004 until 2012, this organization made has made extensive use of this asynchronous computer forensic framework. While no longer active, some old database backups were still available at the time of this study, and timing information has been extracted from these database dumps in order to study the real life disk access properties of such an asynchronous architecture. This appendix gives some background information on the OCFA messaging and routing mechanisms and on those facilities that OCFA implemented in order to prioritize processing of certain data in an attempt to optimize throughput. It than goes on to evaluate the timing information as extracted from the database dumps from five distinct investigations, and will try to reason about some possible explanations regarding the results of the analysis. This chapter will be ending with conclusions about the effectiveness of the OCFA throughput measures and areas of concern regarding disk-cache misses as far as these are relevant to the subject of this dissertation.
 \section{Key points about the OCFA Architecture}
 \subsection{Reasons for the asynchronous design}
 In computer forensic frameworks concurrency and parallelism are important aspects. Many computer forensic tasks, like Optical Character Recognition (OCR) of scanned documents are CPU intensive, while others like creating a full-text search-able index are IO-intensive and some like the calculation of hashes on data are both. There is a tension between optimizing a forensic framework for IO efficiency and optimizing it for the effective use of available CPU power. There also is a tension between optimizing a forensic framework for single-node performance and making the framework scale to make use of a cluster of workers for CPU intensive tasks. When we look at the base idea of concurrency, there are two models by witch a concurrent system can operate: 
