--- a/ocfa/step5/results.tex
+++ b/ocfa/step5/results.tex
@@ -8,7 +8,7 @@ negligible in event flow but not in data flow. Flows that are both negligible in
 \item Only roughly 1\% to 15\% of evidence data sent to the digest check module ends up matching. The remaining data is forwarded to the file-type check module.
 \item Only roughly 15\% to 35\% of data forwarded to the file-type check module ends up being forwarded for processing any further.
 \end{enumerate} 
-This information, combined with what we have seen in our earlier analysis≈es allows us to draw some important conclusions that we shall discuss in the following sections of this appendix.
+This information, combined with what we have seen in our earlier analyses allows us to draw some important conclusions that we shall discuss in the following sections of this appendix.
 \begin{figure}
   \centering
   \includegraphics[width=130mm]{ocfa/step5/stripped1_modules.eps}
