--- a/ocfa/scriptsreference.tex
+++ b/ocfa/scriptsreference.tex
@@ -1,5 +1,6 @@
 \chapter{Scripts created for OCFA timing analysis}
 \noindent 
+\renewcommand{\bibname}{Scripts}
 \begin{thebibliography}{1}
 \bibitem{strip2} strip2.py, {\em Script for extracting timing information from an OCFA  Postgres database dump}  \url{https://github.com/pibara/mattock-dissertation/blob/master/ocfa/step1/strip2.py}
 \bibitem{eventdump} eventdump.py, {\em Script for extracting first occurrence/last occurrence event from an OCFA time-info dump} \url{https://github.com/pibara/mattock-dissertation/blob/master/ocfa/step2/eventdump.py}
